# fast-image-rotation-aarch64

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  main.cpp  main.ipynb  requirements.txt  setup_demo.cpp  tree.txt  view_graph.py
assets/: README.md
docs/report/: references.bib  report.tex
logs/: Jul01_10_22.fig.pickle  Jul01_17_18.fig.pickle  Jul02_00_47.fig.pickle  Jul02_16_59.fig.pickle  Jul02_17_01.fig.pickle  Jul02_17_03.fig.pickle  Jul02_17_19.fig.pickle  Jul03_10_24.fig.pickle  Jul03_10_32_angle225.fig.pickle  Jul03_12_25.fig.pickle  Jun27_19_24.fig.pickle  Jun27_19_48.fig.pickle  Jun27_20_14.fig.pickle  Jun27_22_37.fig.pickle  Jun27_22_55.fig.pickle  Jun27_23_24.fig.pickle  Jun28_13_34.fig.pickle  resolution_5am.jpg.csv  resolution_church_bottom.jpg.csv  resolution_church_wide.jpg.csv  resolution_corridor.jpg.csv  resolution_downhill.jpg.csv  resolution_fish_1080.png.csv  resolution_fish_1440.png.csv  resolution_fish_1800.png.csv  resolution_fish_2160.png.csv  resolution_fish_2520.png.csv  resolution_fish_2880.png.csv  resolution_fish_360.png.csv  resolution_fish_720.png.csv  resolution_viewpoint.jpg.csv
utils/: benchmark_custom__b.cpp  bresenham.cpp  bresenham_alt.cpp  d_benchmark_no_thread.cpp  dlr.py  dlr__b.cpp  dlr_neon.cpp  dlr_opencv.cpp  dlr_opencvMK2__b.cpp  dlr_test.py  dlr_test_zone1.py  dlr_test_zone2.py  dlr_test_zone3.py  opencv_benchmark.cpp  opencv_benchmark__b.cpp
utils/bresenham/: bresenham_loop_colour_new.cpp
